tools/clang/iterator_checker/tests/simple-std-insert.txt
simple-std-insert.cpp:26:4: error: [iterator-checker] Potentially invalid iterator used.
  *it;
   ^
1 error generated.
